<resources>
    <string name="app_name">Dua Zamanı</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="l_tfen_bo_alanlar_doldurunuz">Lütfen boş alanları doldurunuz</string>
    <string name="password">Şifre</string>
    <string name="login_text">Giriş Yap</string>
    <string name="google_ile_devam_et">yada google ile devam et</string>
    <string name="if_you_dont_have_an_account">Hesabınız yokmu? </string>
    <string name="do_register">Kayıt Olun</string>
    <string name="register_text">Kayıt Ol</string>
    <string name="qıbla">Kıble</string>
    <string name="kahramanmaras">Şehir</string>
    <string name="home">Ana Sayfa</string>
    <string name="profile">Profil</string>
    <string name="friday_messages">Cuma Mesajları</string>
    <string name="morning">Sabah Namazı</string>
    <string name="profile_settings">Profili Düzenle</string>
    <string name="feedback">Bizi Değerlendirin</string>
    <string name="share_us">Dua Zamanı\'nı Paylaş</string>
    <string name="about">Hakkında</string>
    <string name="logout">Çıkış Yap</string>
    <string name="ayats">Ayetler</string>
    <string name="share">Paylaş</string>
    <string name="copy">Kopyala</string>
    <string name="about_text">Dua Zamanı uygulaması 2021 yılında Poze Tech taradından çıkartılmıştır. Tüm hakları saklıdır.</string>
</resources>