<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/l_tfen_bo_alanlar_doldurunuz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_login_email"
        tools:layout_editor_absoluteX="51dp" />

    <FrameLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="78dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password"
        android:focusable="true">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize25Percent"
            app:srcCompat="@color/turquoise" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/google_ile_devam_et"
        app:layout_constraintBottom_toTopOf="@+id/google_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginBottom="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/google_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="78dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_view"
        android:focusable="true">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize25Percent"
            android:foreground="@drawable/custom_input"/>

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_google"
                android:layout_gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/google_view"
        android:layout_margin="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/if_you_dont_have_an_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/turquoise"
            android:layout_marginStart="8dp"
            android:text="@string/do_register"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>