<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.profilefragment.ProfileFragment">

        <ImageView
            android:id="@+id/profile_fragment_avatar"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/circle_shape"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/man_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_profile_namesurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="48dp"
            android:text="Dua Zamanı"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profile_fragment_avatar"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/profile_fragment_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="28dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/my_ripple"
            android:paddingStart="18dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_profile_namesurname">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_star" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="@string/feedback"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_fragment_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/my_ripple"
            android:paddingStart="18dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_fragment_review">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="@string/share_us"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_fragment_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/my_ripple"
            android:paddingStart="18dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_fragment_share">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="@string/about"
                android:textSize="21sp" />
        </LinearLayout>


        <FrameLayout
            android:id="@+id/fragment_profile_exit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="28dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/my_ripple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_fragment_about">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:scaleType="fitXY"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize25Percent"
                app:srcCompat="@color/turquoise" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>